# libra

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README  README~  aclocal.m4  config.h.in  configure  configure.ac  distcheck-atlas-gcc  distcheck-atlas-icc  distcheck-macbookpro-gcc  do_configure  do_configure_atlas  do_configure_bgl  do_configure_bgl_fen  do_configure_hikari  libra-config.h.in  prerelink
callpath/: CMakeLists.txt  Callpath.C  Callpath.h  CallpathRuntime.C  CallpathRuntime.h  FrameId.C  FrameId.h  FrameInfo.C  Makefile.am  Makefile.in  Module.C  Module.h  ModuleId.C  ModuleId.h  Translator.C  Translator.h  UniqueId.h  callpath_module.C  callpath_module.h
cluster/: Makefile.am  Makefile.in  bic.h  bic_test.C  color.h  convergence_test.C  counter.h  dissimilarity.h  gaussian.h  id_pair.h  kmedoids.C  kmedoids.h  mirkin_test.C  multi_gather.h  multi_gather_test.C  nondistinct_test.C  par_bic_test.C  par_cluster_speed_test.C  par_cluster_test.C  par_kmedoids.C  par_kmedoids.h  par_partition.C  par_partition.h  partition.C  partition.h  pathological_cluster_test.C  point.C  point.h  point_cluster_test.C  random.h  reuse_test.C  spherical_clustering_generator.h  trial.C  trial.h  write_members_test.C
config/: ltmain.sh  powerpc-bgp-linux-gnu
docs/: index.html  install.html  libra.css  using.html
effort/: CMakeLists.txt  FrameDB.C  FrameDB.h  FrameInfo.C  FrameInfo.h  Makefile.am  Makefile.in  Metric.C  Metric.h  approx_timer.C  base_wrapper.C  base_wrapper.w  bin_test.C  comm_wrapper.C  comm_wrapper.w  dat2mat.C  dataset_test.C  ef.C  effort_api.h  effort_data.C  effort_data.h  effort_dataset.C  effort_dataset.h  effort_key.C  effort_key.h  effort_lock.C  effort_lock.h  effort_metadata.C  effort_metadata.h  effort_module.C  effort_module.h  effort_params.C  effort_params.h  effort_record.C  effort_record.h  effort_signature.C  effort_signature.h  effort_signature_test.C  effort_wrapper.C  effort_wrapper.w  (+33 more)
hcluster/: Makefile.am  Makefile.in
libwavelet/: CMakeLists.txt  Makefile.am  Makefile.in  Timer.C  Timer.h  ac_ibitstream.C  ac_ibitstream.h  ac_obitstream.C  ac_obitstream.h  arithmetic_codec.C  arithmetic_codec.h  buffered_ibitstream.C  buffered_ibitstream.h  buffered_obitstream.C  buffered_obitstream.h  byte_budget_exception.C  byte_budget_exception.h  cdf97.C  cdf97.h  ezw.C  ezw.h  ezw_decoder.C  ezw_decoder.h  ezw_encoder.C  ezw_encoder.h  filter_bank.C  filter_bank.h  huffman.C  huffman.h  ibitstream.C  ibitstream.h  io_utils.C  io_utils.h  matrix_utils.C  matrix_utils.h  mpi_profile.h  mpi_utils.h  obitstream.C  obitstream.h  par_ezw_encoder.C  (+27 more)
m4/: ac_ampl.m4  ac_detect_bluegene.m4  ac_inc_subst.m4  ac_lib_dwarf.m4  ac_lib_elf.m4  ac_lib_papi.m4  ac_lib_subst.m4  ac_lib_xml2.m4  ac_paradyn_tools.m4  ac_pnmpi.m4  ac_python_devel.m4  ac_safe_check_lib.m4  ac_sprng.m4  ax_swig_python.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  lx_find_mpi.m4  lx_lib_dwarf.m4  lx_lib_elf.m4  lx_lib_papi.m4  lx_lib_xml2.m4  lx_mpi.m4  lx_paradyn_tools.m4  lx_pnmpi.m4  lx_python_devel.m4  lx_sprng.m4  vtk.m4
tests/: Makefile.am  Makefile.in  bunny.C  compress_matfile.C  ezwtest.C  generictest.C  insert_bits_test.C  matcat_test.C  papicheck.C  parezwtest.C  parspeedbench.C  partest.C  seqtest.C  swcheck.C  vary_passes.C  vltest.C
viewer/: CMakeLists.txt  EffortData.C  EffortData.h  Makefile.am  Makefile.in  Makefile.swigwrap  dendrogram.py  effort.py  effort_tree.py  hints  icons.py  libra  libra-view  pyeffort.i  pyeffort.py  pyeffort_wrap.C  simtest.C  source.py  summary.C  summary.h  surface.py  viewer.py  vtkEffortData.C  vtkEffortData.h  vtkEffortSource.C  vtkEffortSource.h  vtkZValueScalars.C  vtkZValueScalars.h  vtkeffort.py  vtkutils.py  wavelet_ssim.C  wavelet_ssim.h  wrap_vtk.sh
